option('introspection', type: 'boolean', value: false,
  description: 'Generate GObject Introspection data (GNostrGtk-1.0)')
option('vapi', type: 'boolean', value: true,
  description: 'Generate Vala VAPI bindings (requires introspection)')
option('tests', type: 'boolean', value: true,
  description: 'Build tests')
