cmake_minimum_required(VERSION 3.10)
project(nostrc-tests C)

# Optional fuzzing support
option(ENABLE_FUZZING "Build fuzzing targets" OFF)
option(ENABLE_FUZZING_RUNTIME "Link libFuzzer runtime (requires Clang libclang_rt.fuzzer)" OFF)

# Unit/integration test binaries for nostrc. Uses CTest (enabled at the root).

enable_testing()

# Sanitizer helper (Debug builds)
function(apply_sanitizers target)
  if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    if (GO_ENABLE_TSAN)
      target_compile_options(${target} PRIVATE -fsanitize=thread)
      target_link_options(${target} PRIVATE -fsanitize=thread)
    else()
      if (GO_ENABLE_ASAN)
        target_compile_options(${target} PRIVATE -fsanitize=address)
        target_link_options(${target} PRIVATE -fsanitize=address)
      endif()
      if (GO_ENABLE_UBSAN)
        target_compile_options(${target} PRIVATE -fsanitize=undefined)
        target_link_options(${target} PRIVATE -fsanitize=undefined)
      endif()
    endif()
  endif()
endfunction()

# Find OpenSSL for hashing/crypto used by tests
find_package(OpenSSL REQUIRED)
if (OpenSSL_FOUND)
    message(STATUS "Found OpenSSL version ${OpenSSL_VERSION}")
else()
    message(FATAL_ERROR "OpenSSL not found")
endif()

# Find secp256k1 (assuming pkg-config is available)
find_package(PkgConfig REQUIRED)
pkg_check_modules(SECP256K1 REQUIRED libsecp256k1)
if (SECP256K1_FOUND)
    message(STATUS "Found secp256k1 version ${SECP256K1_VERSION}")
else()
    message(FATAL_ERROR "libsecp256k1 not found")
endif()

# Find the nsync library and headers manually for synchronization primitives
find_library(NSYNC_LIB nsync REQUIRED)
find_path(NSYNC_INCLUDE_DIR nsync.h REQUIRED)

# Include the nsync headers
include_directories(${NSYNC_INCLUDE_DIR})


# Test executables
add_executable(test_nostr tests_nostr.c)

add_executable(test_relay test_relay.c)
add_executable(test_relay_shutdown test_relay_shutdown.c)
add_executable(test_subscription_lifecycle test_subscription_lifecycle.c)
add_executable(test_subscription_backpressure test_subscription_backpressure.c)
add_executable(test_subscription_backpressure_long test_subscription_backpressure_long.c)
add_executable(test_relay_unsubscribe test_relay_unsubscribe.c)
add_executable(test_connection_shutdown_order test_connection_shutdown_order.c)
add_executable(test_envelope_parse test_envelope_parse.c)
add_executable(test_json_event test_json_event.c)
add_executable(test_json_event_fuzzlite test_json_event_fuzzlite.c)
add_executable(test_json_envelope test_json_envelope.c)
add_executable(test_json_filter test_json_filter.c)
add_executable(test_json_filter_tags test_json_filter_tags.c)
add_executable(test_json_filter_robust test_json_filter_robust.c)
add_executable(test_json_filter_fuzzlite test_json_filter_fuzzlite.c)

# Link OpenSSL, libsecp256k1, nsync, and project libraries
target_link_libraries(test_nostr PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})

target_link_libraries(test_relay PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_relay_shutdown PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_subscription_lifecycle PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_subscription_backpressure PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_subscription_backpressure_long PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_relay_unsubscribe PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_connection_shutdown_order PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_envelope_parse PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_json_event PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_json_event_fuzzlite PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_json_envelope PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_json_filter PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_json_filter_tags PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_json_filter_robust PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
target_link_libraries(test_json_filter_fuzzlite PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES} ${JANSSON_LIBRARIES})

# Apply sanitizers to tests if enabled
apply_sanitizers(test_nostr)
apply_sanitizers(test_relay)
apply_sanitizers(test_relay_shutdown)
apply_sanitizers(test_subscription_lifecycle)
apply_sanitizers(test_subscription_backpressure)
apply_sanitizers(test_subscription_backpressure_long)
apply_sanitizers(test_relay_unsubscribe)
apply_sanitizers(test_connection_shutdown_order)
apply_sanitizers(test_envelope_parse)
apply_sanitizers(test_json_event)
apply_sanitizers(test_json_event_fuzzlite)
apply_sanitizers(test_json_envelope)
apply_sanitizers(test_json_filter)
apply_sanitizers(test_json_filter_tags)
apply_sanitizers(test_json_filter_robust)
apply_sanitizers(test_json_filter_fuzzlite)

# Register tests for CTest. Run with: `ctest --output-on-failure`
add_test(NAME test_nostr COMMAND test_nostr)
add_test(NAME test_relay COMMAND test_relay)
add_test(NAME test_relay_shutdown COMMAND test_relay_shutdown)
add_test(NAME test_subscription_lifecycle COMMAND test_subscription_lifecycle)
add_test(NAME test_subscription_backpressure COMMAND test_subscription_backpressure)
add_test(NAME test_subscription_backpressure_long COMMAND test_subscription_backpressure_long)
add_test(NAME test_relay_unsubscribe COMMAND test_relay_unsubscribe)
add_test(NAME test_connection_shutdown_order COMMAND test_connection_shutdown_order)
add_test(NAME test_envelope_parse COMMAND test_envelope_parse)
add_test(NAME test_json_event COMMAND test_json_event)
add_test(NAME test_json_event_fuzzlite COMMAND test_json_event_fuzzlite)

# LibFuzzer target for event deserialization (optional)
if(ENABLE_FUZZING)
  if(ENABLE_FUZZING_RUNTIME)
    add_executable(fuzz_event_deserialize fuzz_event_deserialize.c)
    target_link_libraries(fuzz_event_deserialize PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
    target_include_directories(fuzz_event_deserialize PRIVATE ${SECP256K1_INCLUDE_DIRS})
    target_link_directories(fuzz_event_deserialize PRIVATE ${SECP256K1_LIBRARY_DIRS})
    if (CMAKE_C_COMPILER_ID MATCHES "Clang")
      target_compile_options(fuzz_event_deserialize PRIVATE -fsanitize=fuzzer,address,undefined -fno-omit-frame-pointer)
      target_link_options(fuzz_event_deserialize PRIVATE -fsanitize=fuzzer,address,undefined)
    endif()
    # Run with corpus directory, e.g.:
    #   ./fuzz_event_deserialize ${CMAKE_SOURCE_DIR}/tests/fuzz_seeds/events -runs=0
  else()
    add_executable(fuzz_event_driver fuzz_event_deserialize.c fuzz_driver_main.c)
    target_link_libraries(fuzz_event_driver PRIVATE libnostr ${NSYNC_LIB} nostr_json OpenSSL::SSL OpenSSL::Crypto ${SECP256K1_LIBRARIES})
    target_include_directories(fuzz_event_driver PRIVATE ${SECP256K1_INCLUDE_DIRS})
    target_link_directories(fuzz_event_driver PRIVATE ${SECP256K1_LIBRARY_DIRS})
    if (CMAKE_C_COMPILER_ID MATCHES "Clang")
      target_compile_options(fuzz_event_driver PRIVATE -fsanitize=address,undefined -fno-omit-frame-pointer)
      target_link_options(fuzz_event_driver PRIVATE -fsanitize=address,undefined)
    endif()
    # Run with a corpus directory or file list, e.g.:
    #   ./fuzz_event_driver ${CMAKE_SOURCE_DIR}/tests/fuzz_seeds/events
  endif()
endif()
add_test(NAME test_json_envelope COMMAND test_json_envelope)
add_test(NAME test_json_filter COMMAND test_json_filter)
add_test(NAME test_json_filter_tags COMMAND test_json_filter_tags)
add_test(NAME test_json_filter_robust COMMAND test_json_filter_robust)
add_test(NAME test_json_filter_fuzzlite COMMAND test_json_filter_fuzzlite)

# Include directories for libsecp256k1 headers
target_include_directories(test_nostr PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_relay PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_relay_shutdown PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_subscription_lifecycle PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_subscription_backpressure PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_subscription_backpressure_long PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_relay_unsubscribe PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_connection_shutdown_order PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_envelope_parse PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_json_event PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_json_event_fuzzlite PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_json_envelope PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_json_filter PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_json_filter_tags PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_json_filter_robust PRIVATE ${SECP256K1_INCLUDE_DIRS})
target_include_directories(test_json_filter_fuzzlite PRIVATE ${SECP256K1_INCLUDE_DIRS} ${JANSSON_INCLUDE_DIRS})

# Link directories for libsecp256k1
target_link_directories(test_nostr PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_json_filter PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_json_filter_tags PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_json_filter_robust PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_json_filter_fuzzlite PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_json_envelope PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_json_event PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_json_event_fuzzlite PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_envelope_parse PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_relay PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_subscription_lifecycle PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_subscription_backpressure PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_subscription_backpressure_long PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_relay_unsubscribe PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_connection_shutdown_order PRIVATE ${SECP256K1_LIBRARY_DIRS})
target_link_directories(test_relay_shutdown PRIVATE ${SECP256K1_LIBRARY_DIRS})
